admin panel is done

--- a/dev/assets/sass/_settings.scss
+++ b/dev/assets/sass/_settings.scss
@@ -4,4 +4,4 @@ $width-sm: '(min-width: 576px)';
 $width-xs: '(min-width: 480px)';
 
 $helvetica: 'HelveticaNeue';
-$agoralight: 'Freight Sans Medium';
+$freight: 'Freight Sans Medium';
