--- a/dev/assets/sass/styles.scss
+++ b/dev/assets/sass/styles.scss
@@ -7,15 +7,12 @@ body{
   background-color: #282828;
 }
   .container {
+    display: flex;
     max-width: 1024px;
     margin: 0 auto;
     padding: 0 2%;
+    min-height: 600px;
   }
-@import "../../components/header/_header";
-@import "../../components/banner/_banner";
-@import "../../components/sciences/_sciences";
-@import "../../components/sciences/scienceitem/_scienceitem";
-@import "../../components/feedbackcontacts/_feedbackcontacts";
-@import "../../components/feedbackcontacts/_feedbackcontacts";
-@import "../../components/feedbackcontacts/contacts/__contacts";
-@import "../../components/feedbackcontacts/feedbackform/__feedbackform";
+@import "../../components/adminpanel/_adminpanel";
+@import "../../components/dashboard/_dashboard";
+@import "../../components/dashboard/header/__header";
