--- a/dev/components/_wrap.html
+++ b/dev/components/_wrap.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="container">
         <!--#middle-->
+</div>
 <script src="js/main.js"></script>
 </body>
 </html>
