--- a/dev/components/_wrap.html
+++ b/dev/components/_wrap.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DASHBOARD</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery.scrollbar.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,5 +15,10 @@
         <!--#middle-->
 </div>
 <script src="js/main.js"></script>
+<script>
+    jQuery(document).ready(function(){
+        jQuery('.scrollbar-dynamic').scrollbar();
+    });
+</script>
 </body>
 </html>
