--- a/dev/components/adminpanel/-adminpanel.html
+++ b/dev/components/adminpanel/-adminpanel.html
@@ -2,7 +2,7 @@
     <div class="top">
         <div class="panel-item">
             <img src="img/avatar.png" alt="">
-            <div class="avatar-num">2</div>
+            <div class="avatar-num num">2</div>
         </div>
         <div class="panel-item panel-active">
             <svg class="panel-icon" width="43px" height="43px" viewBox="0 0 43 43" version="1.1"
@@ -39,6 +39,7 @@
                 </g>
             </svg>
             <p class="panel-text">Projects</p>
+            <div class="project-num num">9</div>
         </div>
         <div class="panel-item">
             <svg class="panel-icon" width="42px" height="42px" viewBox="0 0 42 42" version="1.1"
@@ -59,7 +60,7 @@
                     <path fill="#3f3f3f" opacity="0.61" d=" M 25.20 17.55 C 27.90 16.06 30.90 14.96 34.03 15.09 C 32.90 19.97 28.67 23.19 24.94 26.13 C 20.79 28.97 16.22 32.13 10.96 31.90 C 11.48 29.16 13.31 27.04 15.10 25.01 C 16.63 26.27 18.25 27.43 19.99 28.40 C 20.22 27.95 20.69 27.05 20.93 26.60 C 19.54 25.59 18.15 24.58 16.77 23.56 C 18.56 22.02 20.43 20.58 22.36 19.22 C 24.46 20.21 26.74 23.89 28.89 21.20 C 27.85 19.96 25.15 19.43 25.20 17.55 Z" />
                 </g>
             </svg>
-<div class="upgrade-num">3</div>
+<div class="upgrade-num num">3</div>
             <p class="panel-text">Upgrade</p>
         </div>
         <div class="panel-item panel-active">
