--- a/dev/components/dashboard/-dashboard.html
+++ b/dev/components/dashboard/-dashboard.html
@@ -1,3 +1,5 @@
 <div class="dashboard">
 <!--#insert file="./header/--header.html"-->
+<!--#insert file="./togglepanel/--togglepanel.html"-->
+<!--#insert file="./activeprojects/--activeprojects.html"-->
 </div>
