--- a/dev/components/dashboard/activeprojects/--activeprojects.html
+++ b/dev/components/dashboard/activeprojects/--activeprojects.html
@@ -3,4 +3,7 @@
         <!--#insert file="./projectsheader/--projectsheader.html"-->
         <!--#insert file="./projectsbody/--projectsbody.html"-->
     </div>
+    <div class="users-action-wrap scrollbar-dynamic">
+        <!--#insert file="./usersaction/--usersaction.html"-->
+    </div>
 </div>
