--- a/dev/components/dashboard/activeprojects/__activeprojects.scss
+++ b/dev/components/dashboard/activeprojects/__activeprojects.scss
@@ -1,8 +1,24 @@
 .projects-block {
-  padding: 30px;
+  padding: 10px;
   background-color: white;
+  display: flex;
+  justify-content: space-between;
+  @include media($width-mid){
+    padding: 30px;
+  }
   .projects-wrap {
-    display: none;
+    flex-grow: 2;
     border: 1px solid #dcdcdc;
+    border-radius: 3px;
+    max-width: 988px;
+    margin-right: 15px;
+  }
+  .users-action-wrap{
+    @extend .projects-wrap;
+    display: block;
+    max-width: 385px;
+    min-width: 250px;
+    max-height: 910px;
+    overflow-y: scroll;
   }
 }
