--- a/dev/components/adminpanel/-adminpanel.html
+++ b/dev/components/adminpanel/-adminpanel.html
@@ -4,7 +4,7 @@
             <img src="img/avatar.png" alt="">
             <div class="avatar-num num">2</div>
         </div>
-        <div class="panel-item panel-active">
+        <div class="panel-item panel-active board">
             <svg class="panel-icon" width="43px" height="43px" viewBox="0 0 43 43" version="1.1"
                  xmlns="http://www.w3.org/2000/svg">
                 <g id="#ff503fff">
@@ -63,7 +63,7 @@
 <div class="upgrade-num num">3</div>
             <p class="panel-text">Upgrade</p>
         </div>
-        <div class="panel-item panel-active">
+        <div class="panel-item panel-active logout">
             <svg class="panel-icon" width="44px" height="44px" viewBox="0 0 44 44" version="1.1" xmlns="http://www.w3.org/2000/svg">
                 <g id="#ff503fff">
                     <path fill="#3f3f3f" opacity="0.61" d=" M 20.50 0.00 L 23.27 0.00 C 34.06 0.42 43.42 9.73 44.00 20.49 L 44.00 23.28 C 43.57 34.06 34.27 43.43 23.51 44.00 L 20.73 44.00 C 9.94 43.58 0.57 34.27 0.00 23.50 L 0.00 20.72 C 0.43 9.94 9.73 0.57 20.50 0.00 M 20.38 5.34 C 11.77 5.99 4.67 14.17 5.27 22.79 C 5.49 31.72 13.88 39.37 22.80 38.72 C 31.73 38.50 39.37 30.12 38.72 21.20 C 38.51 11.97 29.55 4.19 20.38 5.34 Z" />
