--- a/dev/components/dashboard/activeprojects/projectsbody/--projectsbody.html
+++ b/dev/components/dashboard/activeprojects/projectsbody/--projectsbody.html
@@ -885,4 +885,7 @@
             </div>
         </div>
     </div>
+    <div class="archive-wrap">
+    <a href="#" class="archive">Project Archive</a>
+    </div>
 </div>
