--- a/dev/components/dashboard/activeprojects/usersaction/--usersaction.html
+++ b/dev/components/dashboard/activeprojects/usersaction/--usersaction.html
@@ -134,3 +134,6 @@
         <div class="user-date">today, <span>10:30 </span>pm</div>
     </div>
 </div>
+<div class="archive-wrap">
+    <a href="#" class="archive">Activity Archive</a>
+</div>
