--- a/dev/components/dashboard/header/__header.scss
+++ b/dev/components/dashboard/header/__header.scss
@@ -20,21 +20,15 @@
         height: 17px;
         background-size: cover;
         position: absolute;
-        left: 50%;
+        left: 49%;
         top: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-49%, -50%);
         background: url("img/refreshicon.svg") no-repeat;
+        transition: 0.5s;
+        cursor: pointer;
       }
       &:hover{
-        opacity: 0.8;
-        animation-name: rotate;
-        animation-duration: 2s;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-      }
-      @keyframes rotate {
-        from {transform: rotate(0deg);}
-        to {transform: rotate(360deg);}
+        background-color: #e40c25;
       }
     }
   }
