add dist folder

--- a/dev/components/_wrap.html
+++ b/dev/components/_wrap.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DASHBOARD</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/jquery-3.3.1.slim.min.js"></script>
     <script src="js/jquery.scrollbar.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,10 +15,5 @@
         <!--#middle-->
 </div>
 <script src="js/main.js"></script>
-<script>
-    jQuery(document).ready(function(){
-        jQuery('.scrollbar-dynamic').scrollbar();
-    });
-</script>
 </body>
 </html>
