--- a/dev/components/dashboard/activeprojects/projectsbody/__projectsbody.scss
+++ b/dev/components/dashboard/activeprojects/projectsbody/__projectsbody.scss
@@ -79,13 +79,14 @@
   .project-item-block {
     font-size: 0;
     &:first-child{
-      min-width: 450px;
+      width: 100%;
+      box-sizing: border-box;
+      @include media($width-mid){
+        width: initial;
+      }
     }
     &:last-child{
       margin-top: 3px;
-    }
-    @include media($width-mid){
-      min-width: initial;
     }
   }
   .project-item-wrap {
